try to support loader